# SuperSlots-Support

./: .gitmodules  CMakeLists.txt
content/: reelstrips.xml
doc/: TODO
src/: LineSet.cpp  LineSet.h  Paytable.cpp  Paytable.h  ReelManager.cpp  ReelManager.h  ReelStrip.cpp  ReelStrip.h  SlotWins.cpp  SlotWins.h  SymbolSet.cpp  SymbolSet.h  main.cpp
